@@ -257,6 +257,15 @@ tui_update_variables ()
   return need_redraw;
 }
 
+static void
+set_tui_cmd (char *args, int from_tty)
+{
+}
+
+static void
+show_tui_cmd (char *args, int from_tty)
+{
+}
 
 /*
    ** _initialize_tuiWin().
@@ -266,13 +275,23 @@ void
 _initialize_tuiWin (void)
 {
   struct cmd_list_element *c;
+  static struct cmd_list_element *tui_setlist;
+  static struct cmd_list_element *tui_showlist;
 
   /* Define the classes of commands.
      They will appear in the help list in the reverse of this order.  */
-
   add_cmd ("tui", class_tui, NO_FUNCTION,
 	   "Text User Interface commands.",
 	   &cmdlist);
+
+  add_prefix_cmd ("tui", class_tui, set_tui_cmd,
+                  "TUI configuration variables",
+		  &tui_setlist, "set tui ",
+		  0/*allow-unknown*/, &setlist);
+  add_prefix_cmd ("tui", class_tui, show_tui_cmd,
+                  "TUI configuration variables",
+		  &tui_showlist, "show tui ",
+		  0/*allow-unknown*/, &showlist);
 
   add_com ("refresh", class_tui, _tuiRefreshAll_command,
            "Refresh the terminal display.\n");
@@ -316,18 +335,18 @@ Usage: w <#lines>\n");
 
   /* Define the tui control variables.  */
   c = add_set_enum_cmd
-    ("tui-border-kind", class_tui,
+    ("border-kind", no_class,
      tui_border_kind_enums, &tui_border_kind,
      "Set the kind of border for TUI windows.\n"
      "This variable controls the border of TUI windows:\n"
      "space           use a white space\n"
      "ascii           use ascii characters + - | for the border\n"
      "acs             use the Alternate Character Set\n",
-     &setlist);
-  add_show_from_set (c, &showlist);
+     &tui_setlist);
+  add_show_from_set (c, &tui_showlist);
 
   c = add_set_enum_cmd
-    ("tui-border-mode", class_tui,
+    ("border-mode", no_class,
      tui_border_mode_enums, &tui_border_mode,
      "Set the attribute mode to use for the TUI window borders.\n"
      "This variable controls the attributes to use for the window borders:\n"
@@ -338,11 +357,11 @@ Usage: w <#lines>\n");
      "half-standout   use half bright and standout mode\n"
      "bold            use extra bright or bold\n"
      "bold-standout   use extra bright or bold with standout mode\n",
-     &setlist);
-  add_show_from_set (c, &showlist);
+     &tui_setlist);
+  add_show_from_set (c, &tui_showlist);
 
   c = add_set_enum_cmd
-    ("tui-active-border-mode", class_tui,
+    ("active-border-mode", no_class,
      tui_border_mode_enums, &tui_active_border_mode,
      "Set the attribute mode to use for the active TUI window border.\n"
      "This variable controls the attributes to use for the active window border:\n"
@@ -353,8 +372,8 @@ Usage: w <#lines>\n");
      "half-standout   use half bright and standout mode\n"
      "bold            use extra bright or bold\n"
      "bold-standout   use extra bright or bold with standout mode\n",
-     &setlist);
-  add_show_from_set (c, &showlist);
+     &tui_setlist);
+  add_show_from_set (c, &tui_showlist);
 }
 
 
