@@ -1,3 +1,10 @@
+2001-07-28  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
+
+	* tuiWin.c (_initialize_tuiWin): Use specific tui prefix for
+	set/show configuration variables.
+	(show_tui_cmd): New function.
+	(set_tui_cmd): New function.
+
 2001-07-24  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
 
 	* tui-hooks.c: New file, gdb hooks for tui.
